k8s/frontend-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chat-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image:ramachandrampm/chat-app-frontend:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
